--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "author": "Shifter Team <hello@getshifter.io>",
   "dependencies": {
+    "@capacitor/cli": "^2.2.0",
+    "@capacitor/core": "^2.2.0",
+    "@capacitor/ios": "2.2.0",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.20.27",
     "gatsby-awesome-pagination": "^0.3.5",
