--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@capacitor/cli": "^2.2.0",
     "@capacitor/core": "^2.2.0",
     "@capacitor/ios": "2.2.0",
+    "@ionic/pwa-elements": "^1.5.2",
+    "@ionic/react-hooks": "^0.0.8",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.20.27",
     "gatsby-awesome-pagination": "^0.3.5",
@@ -15,6 +17,7 @@
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-typescript": "^2.3.3",
+    "gatsby-react-router-scroll": "^3.0.11",
     "gatsby-source-wordpress": "^3.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
